UMAP-4:created configuration in yml file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 
 server.port=9090
+spring.security.user.name=Shri
+spring.security.user.password=shri@123
+
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost/miniproject
@@ -9,3 +13,9 @@ spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+app1.messages.saveSuccess = contact saved successfully
+
+app1.messages.saveFail = Contact Failed to save
+app1.messages.Deleted = contact Deleted successfully
+app1.messages.NotDeleted = contact Not Deleted
